# mcsl-daemon-rs

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  README_ZH.md
daemon/: Cargo.toml
daemon/src/: app.rs  config.rs  main.rs
daemon/src/auth/: config.rs  jwt.rs  mod.rs  permission.rs
daemon/src/drivers/: config.rs  driver.rs  graceful_shutdown.rs  mod.rs
daemon/src/drivers/websocket/: behavior.rs  connection.rs  driver.rs  middle_wares.rs  mod.rs
daemon/src/management/: config.rs  inst_config.rs  inst_manager.rs  instance.rs  manager.rs  mod.rs  status.rs  version.rs
daemon/src/management/comm/: mod.rs  process.rs  process_helper.rs
daemon/src/management/factory/: factory.rs  manager.rs  mod.rs  setting.rs  universal.rs
daemon/src/management/inst_factory/: setting.rs
daemon/src/management/minecraft/: mod.rs  slp_client.rs  version.rs
daemon/src/management/strategy/: instance.rs  mod.rs  process.rs  strategies.rs
daemon/src/protocols/: config.rs  mod.rs  protocol.rs
daemon/src/protocols/v1/: config.rs  mod.rs  protocol.rs
daemon/src/protocols/v1/action/: actions.rs
daemon/src/storage/: file.rs  files.rs  java.rs  mod.rs
daemon/src/utils/: event.rs  mod.rs  task_pool.rs  util.rs
daemon/src/utils/status/: daemon_report.rs  mod.rs  system_info.rs
misc/: binary-request.ts
protocol/: Cargo.toml
protocol/src/: lib.rs
protocol/src/files/: directory_entry.rs  java_info.rs  mod.rs
protocol/src/management/: mod.rs
protocol/src/management/instance/: config.rs  factory.rs  mod.rs  performance.rs  report.rs  status.rs
protocol/src/management/minecraft/: mod.rs  player.rs  slp.rs
protocol/src/status/: mod.rs  report.rs  system_info.rs
protocol/src/utils/: encoding.rs  mod.rs  place_holder.rs
protocol/src/v1/action/: actions.rs  mod.rs  retcode.rs  status.rs
protocol/src/v1/event/: data.rs  events.rs  meta.rs  mod.rs
src/: app.rs  base64.rs  main.rs  utils.rs
src/drivers/: graceful_shutdown.rs  mod.rs
src/drivers/capnproto/: driver.rs
src/drivers/websocket/: config.rs  driver.rs  mod.rs  ws_behavior.rs
src/minecraft/: inst_config.rs  inst_manager.rs  inst_status.rs  mod.rs
src/minecraft/inst_factory/: mod.rs
src/protocols/: config.rs
src/protocols/v1/: protocol.rs
src/protocols/v1/action/: mod.rs
src/protocols/v1/event/: events.rs  mod.rs
src/remote/: mod.rs  ws_behavior.rs
src/remote/action/: actions.rs  mod.rs
src/remote/drivers/: capnproto_driver.rs  config.rs  driver.rs  graceful_shutdown.rs  mod.rs  ws_driver.rs
src/remote/drivers/capnproto/: config.rs  driver.rs  mod.rs
src/remote/drivers/websocket/: driver.rs  mod.rs  ws_behavior.rs
src/remote/event/: events.rs  mod.rs
src/remote/protocols/: mod.rs  protocol.rs
src/remote/protocols/v1/: mod.rs  protocol.rs  ws_behavior.rs
src/remote/protocols/v1/action/: actions.rs
src/storage/: app_config.rs  file.rs  files.rs  java.rs  mod.rs
src/user/: auth.rs  mod.rs  userdb.rs  users.rs
src/utils/: cache.rs  encoding.rs  event.rs  mod.rs  remains.rs  util.rs
