[package]
name = "mcsl-daemon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.17.8"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros", "signal"] }
log = "0.4.22"
anyhow = "1.0.86"
jsonwebtoken = "9.3.0"
dashmap = { version = "6.0.1", features = ["serde"] }
pretty_env_logger = "0.5.0"
hyper = { verion = "1.4.1", features = ["server","http1"] }
tokio-tungstenite = "0.23.1"
http-body-util = "0.1.2"
hyper-util = { version= "0.1.6", features = ["tokio", "http1", "server-graceful","server-auto"] }
futures = "0.3.30"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1  # default is 16
panic = "abort" # dangerous
