[package]
name = "mcsl_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
mcsl_protocol = { path = "../protocol", features = ["v1"] }

## 序列化/反序列化
serde = { workspace = true }
serde_json = "1.0"

## 数据处理和标识
uuid = { workspace = true }
sha1 = "0.10.6"
encoding = "0.2.33"
chrono = "0.4.38"

## 日志记录
log = "0.4"
pretty_env_logger = "0.5.0"

## 加密和安全
ring = "0.17.8"
jsonwebtoken = "9.3.0"

## 异步编程
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
    "process",
    "fs",
] }
async-trait = "0.1.83"
futures = "0.3.30"

## 网络和 HTTP
axum = { version = "0.8.4", features = ["ws", "tokio", "multipart"] }
tower-http = { version = "0.6.4", features = ["cors"] }
url = "2"

## 错误处理
anyhow = "1.0"
thiserror = "2"

## 工具和通用库
cached = { version = "0", features = ["async", "ahash"] }
kanal = { git = "https://github.com/AresConnor/kanal.git" }
sysinfo = "0"
regex = "1.11.0"
scc = "2.2.0"
ahash = "0.8.11"
lazy_static = "1.5.0"
varint-rs = "2.2.0"

## 跨平台API
nix = { version = "0.27", features = ["signal"] }  # For Unix
winapi = { version = "0.3", features = ["processthreadsapi", "tlhelp32", "handleapi", "winnt", "minwindef"] }


[profile.fat-release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
inherits = "release"
