[package]
name = "mcsl_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
encoding = "0"
strfmt = "0"
thiserror = "2"
lazy_static = "1"
futures = "0"


[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
serde_json = "1"
pretty_assertions = "1"
tempfile = "3"

[features]
default = ["v1"]
v1 = []